--- a/style.css
+++ b/style.css
@@ -1,7 +1,36 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
-    font-family: Arial, Helvetica, sans-serif;
+    flex-direction: column;
+    font-family: Aldrich, Arial, Helvetica, sans-serif;
     font-size: medium;
+}
+
+#pageHeading {
+    font-family: Aldrich, Arial, Helvetica, sans-serif;
+}
+
+#rpsButtonContainer {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#ROCK {
+    background-image: url(./images/rpsJpeg.jpg);
+    background-size: cover;
+}
+
+
+.victory {
+    font-family: Aldrich, Arial, Helvetica, sans-serif;
+}
+
+.defeat {
+    font-family: Creepster, Arial, Helvetica, sans-serif;
+    color: red;
 }
 
 .hidden {
