--- a/style.css
+++ b/style.css
@@ -71,26 +71,60 @@ button {
     background-image: url(./images/paper.jpg);
 }
 
+#resetButton {
+    margin-top: 25px;
+    font-size: 20px;
+}
+
 #resultDisplay {
     flex: 0 0 auto;
-}
-
-#runningScore {
-    flex: 0 0 auto;
-}
-
-#actionLog {
-    flex: 1;
-    white-space: pre-line;
-}
-
-.victory {
-    font-family: Aldrich, Arial, Helvetica, sans-serif;
+    margin-top: 25px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .defeat {
     font-family: Creepster, Arial, Helvetica, sans-serif;
     color: red;
+}
+
+#runningScore {
+    flex: 0 0 auto;
+    margin: 25px 20%;
+    padding: 5px;
+    border: 5px dotted limegreen;
+}
+
+.collapsible {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.collapsible:hover, .collapsible:active {
+    background-color: limegreen;
+    color: black;
+}
+
+.collapsible:after {
+    content: '\02795';
+}
+
+.active:after {
+    content: "\2796";
+}
+
+#actionLogContainer {
+    display: none;
+}
+
+#actionLog {
+    flex: 1;
+    white-space: pre-line;
+    margin: 0 20%;
 }
 
 .red {
